--- a/templates/main_layout.html
+++ b/templates/main_layout.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> <!-- Link to CSS styling page -->
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script> <!-- Link to Ionicons used for nav bar styling -->
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> <!-- Link to Ionicons used for nav bar styling -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Link to Font Awesome used for nav bar styling -->
     </head>
     <body>
         <div class="container">
