--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -21,7 +21,7 @@
                 <span class="toggle-password" onclick="togglePasswordVisibility('confirm_password')">&#128065;</span>   <!-- eye icon to toggle password visibility -->
             </div>
             <div class="input-container">
-                <input type="email" id="email" name="email" placeholder="Email">
+                <input type="email" id="email" name="email" placeholder="Email (not required)">
             </div>
             <div class="mfa_checkbox"> <!-- checkbox for MFA -->
                 <input type="checkbox" id="mfa" name="mfa">
